# ai-projects

./: .gitignore  README.md
ai_workload_analyzer/: .gitignore  README.md  chainlit.md  env_example.txt  main.py  pyproject.toml
journal_rag/: .gitignore  README.md  chainlit.md  main.py  pyproject.toml
local_gpt/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
stock_analysis_agent/: mcp_client.py  mcp_finance_server.py  mcp_server.py  pyproject.toml
toddler-agent/: .env  pyproject.toml
toddler-agent/app/: main.py
toddler-agent/app/agents/: activity.py  graph.py  restaurant.py  weather.py
toddler-agent/app/core/: config.py  llm.py
toddler-agent/app/tools/: search_tool.py  weather_tool.py
toddler-agent/docs/: architecture.md  prd.md
toddler-agent/docs/stories/: 01_project_setup.md  02_backend_api.md  03_frontend_ui.md  04_agent_tools.md  05_agent_implementation.md  06_agent_orchestration.md  07_intelligent_weather_agent.md  08_intelligent_activity_agent.md  09_intelligent_restaurant_agent.md
toddler-agent/static/: index.html  styles.css
vibe-voice-test/: main.py  pyproject.toml
yt_to_blog/: README.md  main.py  test_main.py
