[project]
name = "toddler-agent"
version = "0.1.0"
description = "A multi-agent system to plan toddler activities."
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langgraph",
    "duckduckgo-search",
    "requests",
    "python-dotenv",
    "pydantic",
    "langchain-community",
    "langchain-ollama"
]
